--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ input.addEventListener('click', function() {
   <title>Listening to Nodes</title>
   <style>
    div {
-     border: 1px solid red;
+     border : 1px solid rgb(16, 58, 83);
      padding: 6px;
      min-height: 12px;
    }
